<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gdsc_alazhar.amazonclone.RegisterActivity">

    <LinearLayout
            android:layout_width="423dp"
            android:layout_height="271dp"
            android:layout_gravity="center"
            android:orientation="vertical">

        <ImageButton
                android:id="@+id/back_home"
                android:layout_width="52dp"
                android:layout_height="38dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/ic_back"
                android:layout_marginTop="50dp"
                android:layout_marginRight="350dp"
        />
        <TextView
                android:layout_width="371dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/register_text_view"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="1dp"
                android:text="@string/text_view_desc"
                android:textColor="@color/color_l"/>
    </LinearLayout>
    <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_prof"
            android:layout_margin="10dp"
            android:hint="@string/user_name"
            android:padding="10dp"
    />
    <EditText
            android:id="@+id/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:layout_margin="10dp"
            android:hint="@string/enter_email"
            android:padding="10dp"
            android:inputType="textEmailAddress"
    />
    <EditText
            android:id="@+id/password_r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_pass"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:padding="10dp"
           />
    <EditText
            android:id="@+id/phone_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_phone_24"
            android:layout_margin="10dp"
            android:hint="@string/phone"
            android:padding="10dp"
            android:inputType="phone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="14dp"
    >
        <Button
                android:id="@+id/register"
                android:layout_width="382dp"
                android:layout_height="70dp"
                android:text="@string/register_btn"
                android:backgroundTint="@color/BlueLight"/>
    </LinearLayout>
</LinearLayout>